--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1522,107 +1522,107 @@ stories:
   domain: http://www.morganmessenger.com/
   link: https://www.morganmessenger.com/2019/12/18/paw-paw-picks-up-win-over-union/
 images:
-- name: razorcliff-razorcliff-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-gred-mash.jpg
-- name: old-school-house-old-schoolhouse-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-free-woman.jpg
-- name: server-cloud-server-racks-clouds-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-jap-wav-pr.jpg
-- name: status-berlin-status-berlin-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dali-two.jpg
-- name: nazi-invasion-waterfall-southern-oregon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-waterfall-southern-oregon.jpg
-- name: abandonedbuildings_far_away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_far_away.jpg
-- name: server-racks-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-spagetti-accident.jpg
-- name: aws-s3-square-old-gas-pumps-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-gas-pumps-square.jpg
-- name: power-lines-power-lines-empty-space-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-pablo-blue.jpg
-- name: downtown-los-angeles-downtown-la-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-gred-mash.JPG
-- name: server-cloud-server-racks-door-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit-2.jpg
-- name: aws-s3-stories-capital-battle-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capital-battle-internet-numbers.jpg
-- name: rain-princess-DSC_0036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0036.jpg
-- name: ellis-island-ellis-island-room-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-paper.jpg
-- name: containership-containership-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crunch-paper.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dali-two.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-creativity.jpg
-- name: old-cabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-internet-numbers.jpg
-- name: mistywoods-babyfoot-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-monet-one.jpg
-- name: old-granary-field-oldhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-clean-view.jpg
-- name: hollywood-building-hollywood-building-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-yellow-paper.jpg
-- name: downtheline-downtheline-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-oily-mcoilface.jpg
-- name: oldtrain-oldtrain-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-graham-sutherland.jpg
-- name: ellis-island-ellisisland-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-hot-spicy.jpg
-- name: copper-circuit-IMG_7072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7072.jpg
-- name: oldhotel-oldhotel-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-light-dali.jpg
-- name: bf-skinner-people-walking-down-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-people-walking-down-street.jpg
-- name: bf-skinner-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-butterfly-purple-flower.jpg
-- name: powerlines-power-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-green-zuma.jpg
-- name: nazi-invasion-blechlety-old-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-blechlety-old-racks.jpg
-- name: powerlines-power-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-ww2-dresden.jpg
-- name: ellis-island-ellisisland-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-spagetti-accident.jpg
-- name: oldcabin-store-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smooth-ride.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purple-storm.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-gred-mash.jpg
-- name: legal-statue-legalstatue-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-pablo-blue.jpg
-- name: oldbarn-oldbarn-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-clean-view.jpg
-- name: power-lines-power-lines-empty-space-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-brush.jpg
-- name: aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-119-800-500-0-max-0--1--1.jpg
-- name: nazi-invasion-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-working-on-railroad-1.jpg
-- name: scream-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_4833.jpg
-- name: old-door-lock-old-door-lock-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-paper.jpg
-- name: amusement-park-amusement-park-2-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-3.jpg
-- name: liberty-back-statue-liberty-back-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-blue-electricity.jpg
-- name: oldsmallboat-oldsmallboat-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-ww2-color.jpg
-- name: copper-circuit-capital_36728420065_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-capital_36728420065_o.jpg
-- name: copper-circuit-train-tracks-bending.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-tracks-bending.jpg
-- name: nazi-invasion-statue-capital-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-capital-cannon.jpg
-- name: status-berlin-status-berlin-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-alberto-giacometti.jpg
-- name: border-crossing-bordercrossing-monet-one.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-monet-one.png
-- name: mistywoods-babyfoot-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-graham-sutherland.jpg
+- name: amusement-park-amusement-park-2-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-oily-mcoilface.jpg
+- name: store-on-corner-store-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-light-dali.jpg
+- name: capital-battle-capitolbattle-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dry-skin.jpg
+- name: carry-load-carryload-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sunday.jpg
+- name: adam-smith-adam-smith-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-electricity.jpg
+- name: adam-smith-adam-smith-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-constitution.jpg
+- name: server-cloud-server-racks-door-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-oily-mcoilface.jpg
+- name: nazi-invasion-IMG_6441.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6441.jpg
+- name: mediterranean-mediterranean-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-umberto-bocc.jpg
+- name: braceros-domingo-ulloa-miami-beach-tower-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-miami-beach-tower-city.jpg
+- name: downtown-la-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-feed-people.JPG
+- name: nazi-invasion-satellite-dishes-pointing-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-satellite-dishes-pointing-up.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+- name: blossombar-crafty-painting-file-00-00-50-22.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-22.jpg
+- name: copper-circuit-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fishing-ship-in-docks.jpg
+- name: hollywood-building-hollywood-building-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-alien-goggles.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-atari-asteroids.jpg
+- name: nazi-invasion-walking-water-front-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-walking-water-front-sun.jpg
+- name: catacombs-catacombs-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-dys-1.jpg
+- name: ellis-island-ellisisland-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-diego-rivera1.jpg
+- name: status-berlin-status-berlin-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dry-skin.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-far-away.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-far-away.JPG
+- name: white-house-lawn-white-house-window-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-post-modern.jpg
+- name: aws-s3-stories-36349148770-1a9d2692b2-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349148770-1a9d2692b2-z.jpg
+- name: ellis-island-ellis-island-room-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-graham-sutherland.jpg
+- name: nazi-invasion-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8312.jpg
+- name: oldbarn-oldbarn-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sunday.jpg
+- name: razorcliff-razorcliff-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-kand-two.jpg
+- name: art-museum-art-museum-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-dresden.jpg
+- name: window-window-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
+- name: blossombar-deep-connections-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-24-99.jpg
+- name: razorcliff-razorcliff-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dry-skin.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-smooth-ride.jpg
+- name: stalin-time-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-station-cloud.jpg
+- name: aws-s3-square-beach-rocks-currents-blue-circuit-5-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5-square.jpg
+- name: statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-horiz-circuit.jpg
+- name: oldtrain-oldtrain-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-rainbow-festival.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-monet-one.jpg
+- name: mosaic-face-mosaic-face-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-light-dali.jpg
+- name: old-school-house-old-schoolhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colored-circuits.jpg
+- name: wind-mills-windmills-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crunch-paper.jpg
+- name: downtown-trucksilo-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-diego-rivera1.jpg
+- name: udnie-IMG_8486.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8486.jpg
+- name: copper-circuit-old-train-on-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-train-on-tracks.jpg
+- name: old-door-lock-old-door-lock-2-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-monet-one.jpg
+- name: status-berlin-status-berlin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-constitution.jpg
+- name: copper-circuit-eiphel-tower-paris-brown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-eiphel-tower-paris-brown.jpg
+- name: old-barn-old-barn-1500-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crafty-painting.jpg
+- name: store-on-corner-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-monet-one.jpg
+- name: wind-mills-windmills-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-clean-view.jpg
+- name: machine-road-machine-road-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dark-rain.jpg
 ---
 Resolving For A Healthy 2020? Talking To Your Family Is A Great Way To Start.&nbsp;Busy Year For Sanitary District.&nbsp;'Skywalker' Rises Again; 'Little Women' Go Big At Box Office.&nbsp;Camden Cove Employees Take Home Awards.&nbsp;Young Boy Dead As Chicopee Police Search For Second Child Near River.&nbsp;Cavs Try To Take 'next Step' In Orange Bowl Against Gators.&nbsp;Sports Editor Apologizes For Tweeting 'scalps' After Game.&nbsp;In 2019, We Ate.&nbsp;
